# DVSO

./: CMakeLists.txt  README.md
scripts/: format_kitti.py  monodepth_dso_kitti.py  warp_right_disp.py
src/: NOTE.md  main_dvso_pangolin.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector2.cpp  ResidualProjections.h  Residuals.cpp  Residuals.h
src/IOWrapper/: ImageRW.h  ImageRW_dummy.cpp
src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: DepthOutputWrapper.h
src/OptimizationBackend/: AccumulatedSCHessian.cpp  EnergyFunctional.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h
src/util/: DatasetReader.h  DepthReader.h  DispReader.h  ImageAndExposure.h  Undistort.cpp  Undistort.h  cnpy.cpp  globalFuncs.h  settings.cpp  settings.h
